added png logo to nav bar

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
         <!-- Custom CSS Links -->
         <link rel="stylesheet" href="./styles/reset.css" />
-        <link rel="stylesheet" href=".//styles/index.css" />
+        <link rel="stylesheet" href="./styles/index.css" />
 
         <title>KevDev</title>
     </head>
     <body>
         <!-- Creating our Navbar -->
-        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark">
             <div class="container-fluid ">
-                <a href="#" class="navbar-brand h1">Welcome</a>
+                <a href="#" class="navbar-brand h1"> <span><img class="logo" src="./images/clipart2530609.png" alt="Logo SVG"></span> Dev-Kev</a>
                 <button
                     type="button"
                     data-bs-toggle="collapse"
@@ -47,7 +47,6 @@
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div
                     class="collapse navbar-collapse justify-content-end"
                     id="navbarNav"
@@ -72,6 +71,8 @@
 
         <!-- Main Section -->
 
+
         <!-- Footer -->
+        <footer>This is my footer</footer>
     </body>
 </html>
