added custom styling to home page, added css variables that will exist throughout the application

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </head>
     <body>
         <!-- Creating our Navbar -->
-        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark">
+        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid ">
                 <a href="#" class="navbar-brand h1"> <span><img class="logo" src="./images/clipart2530609.png" alt="Logo SVG"></span> Dev-Kev</a>
                 <button
@@ -70,9 +70,21 @@
         </nav>
 
         <!-- Main Section -->
+        <main class="container">
+            <!-- Home Section -->
+            <section id="home">
+                <h1>This is my Home Section</h1>
+            </section>
 
+            <!-- About Section -->
+            <section id="about">
+                    <h1>This is my About Section</h1>
+            </section>
+        </main>
+
+        <!-- About  -->
 
         <!-- Footer -->
-        <footer>This is my footer</footer>
+        <footer class="navbar fixed-bottom">This is my footer</footer>
     </body>
 </html>
