--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             crossorigin="anonymous"
         ></script>
 
+        <script src="./js/index.js" crossorigin="anonymous" defer></script>
+
         <!-- Custom CSS Links -->
         <link rel="stylesheet" href="./styles/reset.css" />
         <link rel="stylesheet" href="./styles/index.css" />
@@ -61,9 +63,9 @@
                         <li class="nav-item">
                             <a href="" class="nav-link">Projects</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="" class="nav-link">Blog</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -85,6 +87,8 @@
         <!-- About  -->
 
         <!-- Footer -->
-        <footer class="navbar fixed-bottom">This is my footer</footer>
+        <footer class="fixed-bottom">
+            <p> @ <span id="currentYear"></span> Kevin Albarran</p>
+        </footer>
     </body>
 </html>
