--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Creating our Navbar -->
         <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid ">
-                <a href="#" class="navbar-brand h1"> <span><img class="logo" src="./images/clipart2530609.png" alt="Logo SVG"></span> Dev-Kev</a>
+                <a href="" class="navbar-brand h1"> <span><img class="logo" src="./images/clipart2530609.png" alt="Logo SVG"></span> Dev-Kev</a>
                 <button
                     type="button"
                     data-bs-toggle="collapse"
@@ -58,10 +58,13 @@
                             <a href="" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">About</a>
+                            <a href="./pages/about.html" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Projects</a>
+                            <a href="./pages/projects.html" class="nav-link">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./pages/contact.html" class="nav-link">Contact</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a href="" class="nav-link">Blog</a>
