added margin for main content changed text for other pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -76,7 +76,7 @@
         <!-- Main Section -->
         <main class="container">
 
-            <h1>About</h1>
+            <h1>Contact</h1>
 
         <!-- Footer -->
         <footer class="fixed-bottom">
