did a lot of stuff

--- a/index.html
+++ b/index.html
@@ -78,13 +78,18 @@
         <main class="container">
             <!-- Home Section -->
             <section id="home">
-                <h1>This is my Home Section</h1>
+                <h1>Full-Stack Web Developer</h1>
+                <p>"Talk is cheap. Show me the code."
+                    <br>
+                    <br>
+                    -  Linus Torvalds 
+                </p>
             </section>
 
             <!-- About Section -->
-            <section id="about">
+            <!-- <section id="about">
                     <h1>This is my About Section</h1>
-            </section>
+            </section> -->
         </main>
 
         <!-- About  -->
