--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Creating our Navbar -->
         <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid ">
-                <a href="" class="navbar-brand h1"> <span><img class="logo" src="./images/clipart2530609.png" alt="Logo SVG"></span> Dev-Kev</a>
+                <a href="" class="navbar-brand h1"> <span><img class="logo" src="./images/code-mug.png" alt="Logo SVG"></span> Kev-Dev</a>
                 <button
                     type="button"
                     data-bs-toggle="collapse"
