h1 is now emptyand will be populated by typingHeader.js file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         ></script>
 
         <script src="./js/index.js" crossorigin="anonymous" defer></script>
+        <script src="./js/typingHeader.js" crossorigin="anonymous" defer></script>
 
         <!-- Custom CSS Links -->
         <link rel="stylesheet" href="./styles/reset.css" />
@@ -78,7 +79,7 @@
         <main class="container">
             <!-- Home Section -->
             <section id="home">
-                <h1>Full-Stack Web Developer</h1>
+                <h1></h1>
                 <p>"Talk is cheap. Show me the code."
                     <br>
                     <br>
