removed comments from the page and added some ids for styling

--- a/index.html
+++ b/index.html
@@ -75,27 +75,23 @@
             </div>
         </nav>
 
-        <!-- Main Section -->
         <main class="container">
-            <!-- Home Section -->
             <section id="home">
-                <h1></h1>
+                <div>
+                    <h1 id="heading"></h1>
+                </div>
+
                 <p>"Talk is cheap. Show me the code."
                     <br>
                     <br>
                     -  Linus Torvalds 
                 </p>
+
+                <a>
+                    <button class="projects-button">Projects</button>
+                </a>
             </section>
-
-            <!-- About Section -->
-            <!-- <section id="about">
-                    <h1>This is my About Section</h1>
-            </section> -->
         </main>
-
-        <!-- About  -->
-
-        <!-- Footer -->
         <footer class="fixed-bottom">
             <p> @ <span id="currentYear"></span> Kevin Albarran</p>
         </footer>
