--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- CSS links -->
-
         <!-- Boostrap Links -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -87,8 +85,8 @@
                     -  Linus Torvalds 
                 </p>
 
-                <a>
-                    <button class="projects-button">Projects</button>
+                <a href="./pages/projects.html">
+                    <button class="button">Projects</button>
                 </a>
             </section>
         </main>
