added about me info on the page with button to download resume

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,6 +30,7 @@
         <!-- Custom CSS Links -->
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/index.css" />
+        <link rel="stylesheet" href="../styles/about.css" />
 
         <title>KevDev</title>
     </head>
@@ -74,9 +75,56 @@
         </nav>
 
         <!-- Main Section -->
-        <main class="container">
+        <main class="container about-container">
+            <h1>About Me</h1>
 
-            <h1>About</h1>
+            <div class="divider"></div>
+
+            <p>
+                Hello I'm Kevin Albarran and I'm a Full-Stack Web Developer currently based in the LA area.
+                I got my start in web development after attending a coding bootcamp after college.
+            </p>
+            <br>
+            <br>
+            <br>
+            <p>
+                I started out working in the customer service industry (Trader Joes if you are a fan) and
+                got my first professional start working at a telecommunications engineering company.
+
+            </p>
+            <br>
+            <br>
+            <br>
+            <p>
+                I always like to highlight the work I did at Trader Joes because it ended up teaching me a lot about working in changing environments
+                and allowed me to see similar correlations that exist in the physical world and the software world. This also really helped develop many of my 
+                soft skills since 90% of the job relied on having good communication skills.
+            </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>Little Facts about myself</h2>
+
+            <div class="divider"></div>
+            <ul class="fun-facts">
+                <li>Loves the outdoors and camping</li>
+                <li>I'm more coffee than human most of the time</li>
+                <li>Enjoys working out</li>
+                <li>Can Play the Guitar (not like Eddie Van Halen)</li>
+                <li>Enjoys Reading (pretty much anything)</li>
+            </ul>
+
+            <br>
+            <br>
+            <br>
+            <br>
+ 
+            <h2>Resume</h2>
+            <div class="divider"></div>
+            <a href="../pdf/Resume.pdf" download="Resume-Kevin-Albarran.pdf">
+                <button class="button">Download</button>
+            </a>
 
         <!-- Footer -->
         <footer class="fixed-bottom">
