added new styling

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,6 +30,7 @@
         <!-- Custom CSS Links -->
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/index.css" />
+        <link rel="stylesheet" href="../styles/projects.css" />
 
         <title>KevDev</title>
     </head>
@@ -74,7 +75,7 @@
         </nav>
 
         <!-- Main Section -->
-        <main class="container">
+        <main class="container projects-container">
 
             <h1>Projects</h1>
 
