added closing main tag

--- a/pages/about.html
+++ b/pages/about.html
@@ -125,7 +125,7 @@
             <a href="../pdf/Resume.pdf" download="Resume-Kevin-Albarran.pdf">
                 <button class="button">Download</button>
             </a>
-
+        </main>
         <!-- Footer -->
         <footer class="fixed-bottom">
             <p> @ <span id="currentYear"></span> Kevin Albarran</p>
