added css for diplaying cards. as well as some dummy cards

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,8 +77,16 @@
         <!-- Main Section -->
         <main class="container projects-container">
 
-            <h1>Projects</h1>
-
+            <div class="projects-row">
+                <div class="project-card"></div>
+                <div class="project-card"></div>
+                <div class="project-card"></div>
+                <div class="project-card"></div>
+                <div class="project-card"></div>
+                <div class="project-card"></div>
+                <div class="project-card"></div>
+            </div>
+        </main>
         <!-- Footer -->
         <footer class="fixed-bottom">
             <p> @ <span id="currentYear"></span> Kevin Albarran</p>
