added more components in order to flesh out the styling more

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -78,7 +78,13 @@
         <main class="container projects-container">
 
             <div class="projects-row">
-                <div class="project-card"></div>
+                <div class="project-card">
+                    <h6>Project</h6>
+                    <img src="../images/portfolio-card-stock-image.png" alt="test" />
+                    <div>Description of Project</div>
+                    <div>Tools used in project</div>
+                    <div>Links for Project</div>
+                </div>
                 <div class="project-card"></div>
                 <div class="project-card"></div>
                 <div class="project-card"></div>
