--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,12 +79,30 @@
 
             <div class="projects-row">
                 <div class="project-card">
-                    <h6>Project</h6>
-                    <img src="../images/portfolio-card-stock-image.png" alt="test" />
-                    <div>Description of Project</div>
-                    <div>Tools used in project</div>
-                    <div>Links for Project</div>
+                    <h6 class="project-header">Project Name</h6>
+                    <img class="project-image" src="../images/portfolio-card-stock-image.png" alt="test" />
+                    <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, temporibus! Eum, aperiam ipsa, provident quia nostrum enim fugiat tempore veniam dolores unde eius quos hic nobis odio, repellendus laudantium perspiciatis!</p>
+                    <ul class="project-tools">
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                        <li>Javascript</li>
+                    </ul>
+
+                    <div class="project-links">
+                        <a href="">
+                            <button class="button">Project</button>
+                        </a>
+                        <a href="">
+                            <button class="button">Code</button>
+                        </a>
+                    </div>
                 </div>
+                
                 <div class="project-card"></div>
                 <div class="project-card"></div>
                 <div class="project-card"></div>
