commented out dummy cards

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -103,12 +103,12 @@
                     </div>
                 </div>
                 
+                <!-- <div class="project-card"></div> -->
+                <!-- <div class="project-card"></div>
                 <div class="project-card"></div>
                 <div class="project-card"></div>
                 <div class="project-card"></div>
-                <div class="project-card"></div>
-                <div class="project-card"></div>
-                <div class="project-card"></div>
+                <div class="project-card"></div> -->
             </div>
         </main>
         <!-- Footer -->
