added more list elements

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -81,16 +81,17 @@
                 <div class="project-card">
                     <h6 class="project-header">Project Name</h6>
                     <img class="project-image" src="../images/portfolio-card-stock-image.png" alt="test" />
-                    <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, temporibus! Eum, aperiam ipsa, provident quia nostrum enim fugiat tempore veniam dolores unde eius quos hic nobis odio, repellendus laudantium perspiciatis!</p>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, temporibus! Eum, aperiam ipsa, provident quia nostrum enim fugiat tempore veniam dolores unde eius quos hic nobis odio, repellendus laudantium perspiciatis!
+
+                    </p>
                     <ul class="project-tools">
-                        <li>Javascript</li>
-                        <li>Javascript</li>
-                        <li>Javascript</li>
-                        <li>Javascript</li>
-                        <li>Javascript</li>
-                        <li>Javascript</li>
-                        <li>Javascript</li>
-                        <li>Javascript</li>
+                        <li>C#</li>
+                        <li>Design Patterns</li>
+                        <li>OOP</li>
+                        <li>OOP</li>
+                        <li>OOP</li>
+                        <li>OOP</li>
                     </ul>
 
                     <div class="project-links">
