--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,37 +79,57 @@
 
             <div class="projects-row">
                 <div class="project-card">
-                    <h6 class="project-header">Project Name</h6>
+                    <h6 class="project-header">Design Patterns</h6>
                     <img class="project-image" src="../images/portfolio-card-stock-image.png" alt="test" />
                     <p class="project-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, temporibus! Eum, aperiam ipsa, provident quia nostrum enim fugiat tempore veniam dolores unde eius quos hic nobis odio, repellendus laudantium perspiciatis!
-
+                        A code base where we go through common desgin patterns using OOP.
+                        <br/>
+                        <br/>
+                        Feel free to go through the ReadME files and look at the examples!
                     </p>
                     <ul class="project-tools">
                         <li>C#</li>
-                        <li>Design Patterns</li>
-                        <li>OOP</li>
-                        <li>OOP</li>
-                        <li>OOP</li>
                         <li>OOP</li>
                     </ul>
 
                     <div class="project-links">
-                        <a href="">
+                        <!-- <a href="">
                             <button class="button">Project</button>
-                        </a>
-                        <a href="">
-                            <button class="button">Code</button>
+                        </a> -->
+                        <a href="https://github.com/dev-kev-coder/DesignPatternNotes" target="_blank">
+                            <button class="button ">&lt;/&gt;</button>
                         </a>
                     </div>
                 </div>
-                
-                <!-- <div class="project-card"></div> -->
-                <!-- <div class="project-card"></div>
-                <div class="project-card"></div>
-                <div class="project-card"></div>
-                <div class="project-card"></div>
-                <div class="project-card"></div> -->
+            </div>
+
+            <h3 class="section-header">Coming Soon to a local machine near you...</h3>
+            <div class="projects-row">
+                <div class="project-card">
+                    <h6 class="project-header">IIS Deployment App</h6>
+                    <div class="project-image placeholder"></div> 
+                    <p class="project-description">
+                        A desktop app to assist with CI/CD. It deploying files to production and reverting it back if need be.
+                        <br/>
+                        <br/>
+                        Feel free to go through the ReadME files and look at the examples!
+                    </p>
+                    <ul class="project-tools">
+                        <li>JavaScript</li>
+                        <li>Rust</li>
+                        <li>Tauri</li>
+                        <li>React.js</li>
+                    </ul>
+
+                    <div class="project-links">
+                        <a href="" target="_blank">
+                            <button class="button" disabled>Project</button>
+                        </a>
+                        <a href="" target="_blank">
+                            <button class="button" disabled>&lt;/&gt;</button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </main>
         <!-- Footer -->
